--- a/src/components/TicketList/TicketList.module.scss
+++ b/src/components/TicketList/TicketList.module.scss
@@ -3,3 +3,12 @@
   flex-direction: column;
   gap: 25px;
 }
+
+.btn {
+  border-radius: 5px;
+  background-color: #2196f3;
+  color: white;
+  height: 70px;
+  border: 1px solid #dfe5ec;
+  letter-spacing: 0.5px;
+}
